# particles-universe

./: .gitignore  LICENSE  README.md  initial_conditions.py  interesting_conds.py  main.py  mp4_to_gif.py  old_matlab_code.m  pyproject.toml  requirements.txt
universe_game/: __init__.py  distributions.py  pygame_utils.py  universe_game.py  utils.py
universe_game/managers/: __init__.py  controller.py  graphics.py  particle.py
