[tool.poetry]
name = "particles-universe"
version = "0.1.0"
description = ""
authors = ["VitaminB16"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.26.1"
matplotlib = "^3.8.0"
scipy = "^1.11.3"
pygame = "^2.5.2"
numexpr = "^2.8.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
